added design to main window

--- a/WpfApp2/MuSearch.csproj
+++ b/WpfApp2/MuSearch.csproj
@@ -134,6 +134,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="GUI\DesignFiles\music_notes_wallpaper_by_amh05.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
