deleted general folder

--- a/WpfApp2/MuSearch.csproj
+++ b/WpfApp2/MuSearch.csproj
@@ -111,6 +111,8 @@
     <Compile Include="BusinessLayer.Interfaces\ISongs.cs" />
     <Compile Include="BusinessLayer.Interfaces\IUsers.cs" />
     <Compile Include="BusinessLayer\Categories.cs" />
+    <Compile Include="BusinessLayer\Category.cs" />
+    <Compile Include="BusinessLayer\Game.cs" />
     <Compile Include="BusinessLayer\GameGrid.cs" />
     <Compile Include="BusinessLayer\Point.cs" />
     <Compile Include="BusinessLayer\Songs.cs" />
@@ -126,7 +128,6 @@
     <Compile Include="DB\DBconnection.cs" />
     <Compile Include="DB\DBsongs.cs" />
     <Compile Include="DB\DBusers.cs" />
-    <Compile Include="General\General.cs" />
     <Compile Include="GUI\AllGames.xaml.cs">
       <DependentUpon>AllGames.xaml</DependentUpon>
     </Compile>
