username only in config file

--- a/WpfApp2/App.config
+++ b/WpfApp2/App.config
@@ -5,5 +5,7 @@
     </startup>
   <appSettings>
     <add key="DBPassword" value=""/>
+    <add key="DBUsername" value="root"/>
+    <add key="SchemeName" value="musearchdb"/>
   </appSettings>
 </configuration>
